# fitrs

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
benches/: fits.rs
src/: fits.rs  header.rs  lib.rs  scifmt.rs  types.rs  wcs.rs
tests/: read.rs  read_multithread.rs  write.rs
verify/: requirements.txt  verify.py
